splash visibility fix

--- a/app/static/scss/splash.scss
+++ b/app/static/scss/splash.scss
@@ -171,7 +171,7 @@ html, body {
 #splash-main-image {
     height:100%;
     min-width: 1150px; // ? i dunno why this works
-    min-height: 600px;
+    min-height: 800px;
     background: url('../images/julian.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
